--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.czy1024</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/czy1024/luna-common</url>
 
@@ -197,6 +197,7 @@
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>2.9.1</version>
                         <configuration>
+                            <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
                             <additionalparam>-Xdoclint:none</additionalparam>
                         </configuration>
                         <executions>
