--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.czy1024</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>1.0.3</version>
+    <version>1.0.6</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/czy1024/luna-common</url>
 
@@ -61,6 +61,11 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
+            <version>4.5.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
             <version>4.5.11</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
