--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.github.czy1024</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>1.0.6</version>
+    <version>1.0.8</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/czy1024/luna-common</url>
 
@@ -74,7 +74,12 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.10.3</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -94,12 +99,6 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.10.6</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
-            <version>2.2.2.RELEASE</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/junit/junit -->
