--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.czy1024</groupId>
+    <groupId>io.github.lunasaw</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
     <description>common is project which contains common utils</description>
-    <url>https://github.com/czy1024/luna-common</url>
+    <url>https://github.com/lunasaw/luna-common</url>
 
     <properties>
         <java.version>1.8</java.version>
         <!-- github server corresponds to entry in ~/.m2/settings.xml -->
-        <github.global.server>github_auth</github.global.server>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!--dependencies-->
@@ -116,9 +115,9 @@
 
 
     <scm>
-        <url>https://github.com/czy1024/luna-common</url>
-        <connection>scm:git:https://github.com/czy1024/luna-common.git</connection>
-        <developerConnection>scm:git:https://github.com/czy1024/luna-common</developerConnection>
+        <url>https://github.com/lunasaw/luna-common</url>
+        <connection>scm:git:https://github.com/lunasaw/luna-common.git</connection>
+        <developerConnection>scm:git:https://github.com/lunasaw/luna-common</developerConnection>
     </scm>
     <profiles>
         <profile>
