--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
 # Compiled class file
 *.class
 
@@ -32,9 +43,7 @@ hs_err_pid*
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
 *.iws
-*.iml
 *.ipr
 
 ### NetBeans ###
@@ -57,3 +66,8 @@ hs_err_pid*
 
 ## runtime ##
 /*/log
+/log
+
+## .DS_Store ##
+/*/.DS_Store
+**.gitignore
