--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.lunasaw</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>2.0.0-RELEASE</version>
+    <version>2.0.0-SNAPSHOT</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/lunasaw/luna-common</url>
 
@@ -39,7 +39,7 @@
     <licenses>
         <license>
             <name>Apache 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
 
@@ -101,27 +101,27 @@
 
 
     <distributionManagement>
-        <!--        <repository>-->
-        <!--            <id>ossrh</id>-->
-        <!--            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>-->
-        <!--        </repository>-->
-        <!--        <snapshotRepository>-->
-        <!--            <id>ossrh</id>-->
-        <!--            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>-->
-        <!--        </snapshotRepository>-->
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
 
 
         <!-- 两个ID必须与setting.xml中的<server><id>nexus-releases</id></server>保持一致-->
-        <repository>
-            <id>nexus-releases</id>
-            <name>Nexus Release Repository</name>
-            <url>http://localhost:8082/repository/maven-releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>http://localhost:8082/repository/maven-snapshots/</url>
-        </snapshotRepository>
+        <!--        <repository>-->
+        <!--            <id>nexus-releases</id>-->
+        <!--            <name>Nexus Release Repository</name>-->
+        <!--            <url>http://localhost:8082/repository/maven-releases/</url>-->
+        <!--        </repository>-->
+        <!--        <snapshotRepository>-->
+        <!--            <id>nexus-snapshots</id>-->
+        <!--            <name>Nexus Snapshot Repository</name>-->
+        <!--            <url>http://localhost:8082/repository/maven-snapshots/</url>-->
+        <!--        </snapshotRepository>-->
     </distributionManagement>
 
 
@@ -158,7 +158,7 @@
                         <configuration>
                             <autoVersionSubmodules>true</autoVersionSubmodules>
                             <useReleaseProfile>false</useReleaseProfile>
-                            <releaseProfiles>release</releaseProfiles>
+                            <releaseProfiles>snapshots</releaseProfiles>
                             <goals>deploy</goals>
                         </configuration>
                     </plugin>
