--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
         <commons-io.version>2.11.0</commons-io.version>
         <httpclient.version>4.5.13</httpclient.version>
         <httpmime.version>4.5.13</httpmime.version>
-        <guava.version>31.0.1-jre</guava.version>
+        <guava.version>31.1-jre</guava.version>
         <joda-time.version>2.10.6</joda-time.version>
-        <fast-json.version>2.0.1</fast-json.version>
+        <fast-json.version>2.0.3</fast-json.version>
         <oshi.version>6.1.3</oshi.version>
         <junit.version>4.13.2</junit.version>
     </properties>
@@ -176,6 +176,7 @@
                         <configuration>
                             <source>1.8</source>
                             <target>1.8</target>
+                            <encoding>utf-8</encoding>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -212,6 +213,10 @@
                         <configuration>
                             <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
                             <additionalparam>-Xdoclint:none</additionalparam>
+                            <aggregate>true</aggregate>
+                            <charset>UTF-8</charset><!-- utf-8读取文件 -->
+                            <encoding>UTF-8</encoding><!-- utf-8进行编码代码 -->
+                            <docencoding>UTF-8</docencoding><!-- utf-8进行编码文档 -->
                         </configuration>
                         <executions>
                             <execution>
@@ -285,7 +290,12 @@
                         <version>2.9.1</version>
                         <configuration>
                             <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+                            <!-- 忽略生成文档中的错误，如果想看下控制台中关于生成doc错误的去掉这个参数 -->
                             <additionalparam>-Xdoclint:none</additionalparam>
+                            <aggregate>true</aggregate>
+                            <charset>UTF-8</charset><!-- utf-8读取文件 -->
+                            <encoding>UTF-8</encoding><!-- utf-8进行编码代码 -->
+                            <docencoding>UTF-8</docencoding><!-- utf-8进行编码文档 -->
                         </configuration>
                         <executions>
                             <execution>
