--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.lunasaw</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>2.2.3</version>
+    <version>2.2.4</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/lunasaw/luna-common</url>
 
@@ -123,33 +123,6 @@
         </dependency>
     </dependencies>
 
-    <distributionManagement>
-
-        <!-- 两个ID必须与setting.xml中的<server><id>nexus-releases</id></server>保持一致-->
-        <!--        <repository>-->
-        <!--            <id>nexus-releases</id>-->
-        <!--            <name>Nexus Release Repository</name>-->
-        <!--            <url>http://localhost:8082/repository/maven-releases/</url>-->
-        <!--        </repository>-->
-        <!--        <snapshotRepository>-->
-        <!--            <id>nexus-snapshots</id>-->
-        <!--            <name>Nexus Snapshot Repository</name>-->
-        <!--            <url>http://localhost:8082/repository/maven-snapshots/</url>-->
-        <!--        </snapshotRepository>-->
-
-        <repository>
-            <id>github_auth</id>
-            <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/lunasaw/luna-common</url>
-        </repository>
-        <snapshotRepository>
-            <id>github_auth</id>
-            <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/lunasaw/luna-common</url>
-        </snapshotRepository>
-    </distributionManagement>
-
-
     <profiles>
         <profile>
             <id>github_auth</id>
@@ -177,7 +150,7 @@
                 </repository>
             </repositories>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
         </profile>
         <profile>
@@ -193,7 +166,7 @@
                 </snapshotRepository>
             </distributionManagement>
             <activation>
-                <activeByDefault>true</activeByDefault>
+                <activeByDefault>false</activeByDefault>
             </activation>
             <build>
                 <plugins>
