--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>io.github.lunasaw</groupId>
     <artifactId>luna-common</artifactId>
     <name>luna-common</name>
-    <version>2.2.4</version>
+    <version>2.3.1</version>
     <description>common is project which contains common utils</description>
     <url>https://github.com/lunasaw/luna-common</url>
 
@@ -150,7 +150,7 @@
                 </repository>
             </repositories>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
         <profile>
@@ -166,7 +166,7 @@
                 </snapshotRepository>
             </distributionManagement>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
@@ -181,6 +181,7 @@
                             <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                             <!--自动释放，deploy就不需要在仓库中在操作部署了-->
                             <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <goal>deploy</goal>
                         </configuration>
                     </plugin>
 
