--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -10,16 +10,6 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Set up Java for publishing to GitHub Packages
-        uses: actions/setup-java@v3
-        with:
-          java-version: '8'
-          distribution: 'zulu'
-          server-id: github_auth
-      - name: Publish package Github
-        run: mvn -DskipTests --batch-mode deploy -Pgithub_auth
-        env:
-          GITHUB_TOKEN: ${{ secrets.SECRET_KEY }}
 
       - uses: actions/checkout@v3
       - name: Set up Java for publishing to Maven Central Repository
@@ -40,6 +30,22 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE}}
 
 
+  github_publish:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+      steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-java@v3
+          with:
+            java-version: '8'
+            distribution: 'zulu'
+            server-id: github_auth
+        - name: Publish package
+          run: mvn -DskipTests --batch-mode deploy -P github_auth
+          env:
+            GITHUB_TOKEN: ${{ secrets.SECRET_KEY }}
 
 #  publish:
 #    # 任务运行的环境
