--- a/pom.xml
+++ b/pom.xml
@@ -251,6 +251,12 @@
                             <charset>UTF-8</charset><!-- utf-8读取文件 -->
                             <encoding>UTF-8</encoding><!-- utf-8进行编码代码 -->
                             <docencoding>UTF-8</docencoding><!-- utf-8进行编码文档 -->
+                            <tags>
+                                <tag>
+                                    <name>date</name>
+                                    <name>description</name>
+                                </tag>
+                            </tags>
                         </configuration>
                         <executions>
                             <execution>
