--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,7 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-codec.version>1.15</commons-codec.version>
         <commons-io.version>2.11.0</commons-io.version>
-        <httpclient.version>5.2.1</httpclient.version>
-        <httpmime.version>4.5.13</httpmime.version>
+        <httpclient5.version>5.2.1</httpclient5.version>
         <guava.version>31.1-jre</guava.version>
         <joda-time.version>2.10.6</joda-time.version>
         <fast-json.version>2.0.26</fast-json.version>
@@ -74,7 +73,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>${httpclient.version}</version>
+            <version>${httpclient5.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
