--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,14 @@
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <commons-codec.version>1.15</commons-codec.version>
         <commons-io.version>2.11.0</commons-io.version>
-        <httpclient5.version>5.2.1</httpclient5.version>
+        <httpclient-5.version>5.2.1</httpclient-5.version>
         <guava.version>31.1-jre</guava.version>
         <joda-time.version>2.10.6</joda-time.version>
         <fast-json.version>2.0.26</fast-json.version>
         <oshi.version>6.1.3</oshi.version>
         <junit.version>4.13.2</junit.version>
         <lombok.version>1.18.26</lombok.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
     </properties>
     <developers>
         <developer>
@@ -73,7 +74,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents.client5</groupId>
             <artifactId>httpclient5</artifactId>
-            <version>${httpclient5.version}</version>
+            <version>${httpclient-5.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
         <dependency>
@@ -108,12 +109,18 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
+            <version>${validation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.36</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
