:bookmark: 版本升级xml, javax.xml.bind.-> jakarta.xml.bind.

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,11 @@
             <version>${lombok.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>4.0.5</version> <!-- 最新版本 -->
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j-simple.version}</version>
