--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,11 @@
             <version>4.0.5</version> <!-- 最新版本 -->
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.5</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j-simple.version}</version>
